--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ Share the joy with our beautifully packed gift boxes — perfect for holidays, t
                         <p class="text">One slice warms hearts.</p>
                         <p class="text">Wholesome and rich.</p>
                         <p class="text">Lovable</p>
-                        <button>Love in every loaf.</button>
+                        <button>Purchase Now</button>
                     </div>
                 </div>
                 </div>
